# vnlp_colab

./: README.md  convert_to_onnx.py  create_zip_xml.sh  old_vnlp_colab.tar.xz  pyproject.toml  vnlp-colab-project_tf_data_2025-11-15_07.23.zip.xml
backup/: AI-input-vnlp-colab-project_2025-11-14_11.26.zip.xml  analysis_results.initial.pkl  analysis_results.pkl  final_df_describe_tf_data.txt  final_df_test (1).csv  final_df_test_tf_data.csv  vnlp-colab-project_pre_tf_data.zip.xml
docs/: A-ZB_sentence-split-corrected.csv  Blueprint_Advanced_Inference_ONNX_1_2.md  Blueprint_Advanced_Inference_ONNX_2_2.md  Blueprint_tf_data_Pipeline_1_2.md  DEP_Model_Architecture.txt  Model_info.ods  Model_summary.txt  Packaging_and_Testing.md  USER_PROMPT_NEXT_SESSION.md  USER_PROMPT_ONNX.md  USER_PROMPT_TF_DATA_PIPELINE.md  USER_PROMPT_Tokens_40_Other_Issue.md  VNLP_COLAB_HANDOFF_1_2.md  VNLP_COLAB_HANDOFF_DETAILED_1_2.md  VNLP_Colab_Refactor.md  ner_colab.md  pos_colab.md  pos_utils_colab.md  system_instruct.md  system_instruct_2.md  system_instruct_3.md  system_instruct_tokens40_script_updates.md  utils_colab.md
docs/4AI/: Blueprint_tf_data_Pipeline_2_2.md  NER_Model_Architecture.txt  POS_Model_Architecture.txt  Project_Context_Technical_Documentation.md  Push_to_Github.md  Revised_Technical_Implementation_Blueprint-VNLP_Colab_Refactor_Phases.md  Technical_Implementation_Blueprint-VNLP_Colab_Refactor.md  Technical_Implementation_Blueprint-VNLP_Colab_Refactor_final.md  VNLP_COLAB_HANDOFF_2_2.md  VNLP_COLAB_HANDOFF_DETAILED_2_2.md  VNLP_COLAB_WORKING_HANDOFF_1_2.md  VNLP_COLAB_WORKING_HANDOFF_2_2.md  VNLP_Colab_Refactor_Handoff.md  dep_colab.md  dep_utils_colab.md  ner_utils_colab.md  normalizer_colab.md  pipeline_colab.md  stemmer_colab.md  stemmer_morph_analyzer_model_architecture.txt  stemmer_utils_colab.md  tokenizer-normalizer-ner_utils-dep_utils.md
tests/: final_df_describe (1).txt  final_df_describe.txt  final_df_test.csv  test_dep.py  test_ner.py  test_pipeline.py  test_pos.py  test_stemmer.py
vnlp-custom/vnlp/: AI-input-vnlp_2025-11-13_16.40.zip.xml  create_zip_xml.sh
vnlp-custom/vnlp/dependency_parser/: _spu_context_utils.py  dependency_parser.py  spu_context_dp.py  utils.py
vnlp-custom/vnlp/named_entity_recognizer/: _spu_context_utils.py  named_entity_recognizer.py  spu_context_ner.py
vnlp-custom/vnlp/normalizer/: normalizer.py
vnlp-custom/vnlp/part_of_speech_tagger/: _spu_context_utils.py  part_of_speech_tagger.py  spu_context_pos.py
vnlp-custom/vnlp/part_of_speech_tagger/resources/: PoS_SPUContext_prod.weights
vnlp-custom/vnlp/sentiment_analyzer/: spu_context_bigru_sentiment.py
vnlp-custom/vnlp/sentiment_analyzer/resources/: Sentiment_SPUCBiGRU_prod.weights
vnlp-custom/vnlp/stemmer_morph_analyzer/: _melik_utils.py  _yildiz_analyzer.py  stemmer_morph_analyzer.py
vnlp-custom/vnlp/tokenizer/: tokenizer.py
vnlp_colab/: pipeline_colab.py  tokenizer_colab.py  utils_colab.py
vnlp_colab/dep/: dep_colab.py  dep_treestack_utils_colab.py  dep_utils_colab.py
vnlp_colab/ner/: ner_colab.py  ner_utils_colab.py
vnlp_colab/normalizer/: normalizer_colab.py
vnlp_colab/pos/: pos_colab.py  pos_treestack_utils_colab.py  pos_utils_colab.py
vnlp_colab/sentiment/: sentiment_colab.py  sentiment_utils_colab.py
vnlp_colab/stemmer/: _yildiz_analyzer.py  stemmer_colab.py  stemmer_utils_colab.py
