# pyproject.toml
[build-system]
requires = ["setuptools&gt;=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vnlp_colab"
version = "2.2.0" # Version bump for ONNX integration
authors = [
  { name="VNLP Project Authors" },
]
description = "A Colab-optimized version of the VNLP library for high-performance Turkish NLP."
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = "&gt;=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

# All required dependencies for the pipeline to run in a fresh environment.
dependencies = [
    "tensorflow&gt;=2.15.0",
    "keras&gt;=3.0.0",
    "numpy&gt;=1.26.0",
    "pandas&gt;=2.0.0",
    "sentencepiece==0.2.1",
    "tqdm&gt;=4.62.0",
    "regex&gt;=2.3.6.3",
    "requests&gt;=2.28.0",
    # --- NEW: Added ONNX dependencies for peak performance ---
    "onnx&gt;=1.16.0",
    "tf2onnx&gt;=1.16.0",
    "onnxruntime-gpu&gt;=1.18.0",
]

[project.urls]
"Homepage" = "https://github.com/vngrs-ai/vnlp"
"Bug Tracker" = "https://github.com/vngrs-ai/vnlp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vnlp_colab*"]

[tool.setuptools.package-data]
"vnlp_colab.dep.resources" = ["*.json"]
"vnlp_colab.ner.resources" = ["*.json"]
"vnlp_colab.pos.resources" = ["*.json"]
"vnlp_colab.stemmer.resources" = ["*.txt", "*.json"]
"vnlp_colab.resources" = ["*.txt", "*.model"]